# yesod-scaffold

./: .gitignore  .haskell-ghc-mod.json  .travis.yml  Add.hs  Application.hs  DevelMain.hs  Foundation.hs  Home.hs  Import.hs  LICENSE  Layout.hs  Main.hs  Makefile  Model.hs  MultiFile.hs  PROJECTNAME.cabal  Prelude.hs  README.markdown  README.md  Settings.hs  SettingsLib.hs  Shared.hs  build.hs  devel.hs  hindent_all  make-template.hs  merge.hs  package.yaml  push.hs  routes.yesodroutes  setup.sh  stack.yaml  to-stack-templates.sh  toy-project.cabal  yesod-scaffold.cabal
Handler/: Comment.hs  Common.hs  Fay.hs  Home.hs  Profile.hs
Import/: Base.hs  NoFoundation.hs  NoWarning.hs
Settings/: StaticFiles.hs
app/: DevelMain.hs  Main.hs  devel.hs  main.hs
config/: keter.yaml  keter.yml  models  models.persistentmodels  mongoDB.yml  mysql.yml  postgresql.yml  routes  settings-test.yml  settings.yml  sqlite.yml  test-settings.yml
deploy/: Procfile
fay/: DOM.hs  Home.hs
fay-shared/: SharedTypes.hs
scripts/: build_postgres_db  name_project
src/: App.hs  Application.hs  DB.hs  Foundation.hs  Import.hs  Misc.hs  Model.hs  Settings.hs  Task.hs
src/App/: FoundationImport.hs  Handler.hs  NoFoundationImport.hs
src/App/DB/: Model.hs
src/App/Route/Common/: Handler.hs
src/App/Route/Home/: Form.hs  Handler.hs
src/DB/: Email.hs  JSON.hs  User.hs
src/Foundation/: Orphans.hs  Primitive.hs
src/Handler/: Comment.hs  Comments.hs  Common.hs  Fay.hs  Home.hs  Post.hs  Posts.hs  Profile.hs
src/Helpers/: Comment.hs
src/Import/: Base.hs  NoFoundation.hs
src/Model/: Email.hs  Entity.hs  JSON.hs  User.hs
src/RIO/: Yesod.hs
src/Settings/: StaticFiles.hs
src/Task/: Cron.hs
src/Web/: Application.hs  Foundation.hs  Import.hs  Settings.hs
src/Web/Handler/: Comment.hs  Common.hs  Home.hs  Profile.hs
src/Web/Import/: NoFoundation.hs
src/Web/Settings/: StaticFiles.hs
stack/: postgres.yaml
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.julius  default-layout.lucius  homepage.hamlet  homepage.julius  layout.hamlet  profile.hamlet
test/: HomeTest.hs  Seed.hs  Spec.hs  TestImport.hs  main.hs
test/Handler/: CommentSpec.hs  CommonSpec.hs  HomeSpec.hs  PostSpec.hs  ProfileSpec.hs
tests/: HomeTest.hs  TestImport.hs
