name:              PROJECTNAME
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

library
    hs-source-dirs: ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Import.Base
                     Layout
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Misc

    ghc-options: -Wall -fwarn-tabs -O0

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                ConstraintKinds
                RankNTypes

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      
                 , yesod-core                    >= 1.4.6      
                 , yesod-auth                    >= 1.4.0      
                 , yesod-static                  >= 1.4.0.3    
                 , yesod-form                    >= 1.4.0      
                 , bytestring                    >= 0.9        
                 , text                          >= 0.11       
                 , persistent                    >= 2.0        
                 , persistent-postgresql         >= 2.1.1      
                 , persistent-template           >= 2.0        
                 , template-haskell
                 , shakespeare                   >= 2.0        
                 , hjsmin                        >= 0.1        
                 , monad-control                 >= 0.3        
                 , wai-extra                     >= 3.0        
                 , yaml                          >= 0.8        
                 , http-conduit                  >= 2.1        
                 , directory                     >= 1.1        
                 , warp                          >= 3.0        
                 , data-default
                 , aeson                         >= 0.6        
                 , conduit                       >= 1.0        
                 , monad-logger                  >= 0.3        
                 , fast-logger                   >= 2.2        
                 , wai-logger                    >= 2.2        
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , contravariant
                 , transformers
                 , http-client

executable         PROJECTNAME
    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, PROJECTNAME

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

