name:                yesod-scaffold
version:             0.1.0.0
synopsis:            Yesod scaffolding tools
homepage:            https://github.com/yesodweb/yesod-scaffold
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable yesod-scaffold-build
  main-is:             build.hs
  other-modules:       Shared
  build-depends:       base >= 4 && < 5
                     , classy-prelude-conduit >= 0.4
                     , shelly >= 0.14
                     , project-template >= 0.1
                     , system-fileio >= 0.3
                     , system-filepath >= 0.4
                     , conduit

executable yesod-scaffold-make-template
  main-is:             make-template.hs
  other-modules:       Shared
  build-depends:       base >= 4 && < 5
                     , classy-prelude-conduit >= 0.4
                     , shelly >= 0.14
                     , project-template >= 0.1
                     , system-fileio >= 0.3
                     , system-filepath >= 0.4

executable yesod-scaffold-merge
  main-is:             merge.hs
  other-modules:       Shared
  build-depends:       base >= 4 && < 5
                     , classy-prelude-conduit >= 0.4
                     , shelly >= 0.14
                     , project-template >= 0.1
                     , system-fileio >= 0.3
                     , system-filepath >= 0.4
